kubernetes/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: grovince/rapa_redis:v1
        ports:
        - containerPort: 6379
        volumeMounts:
          - name: redis-conf
            mountPath: /usr/local/etc/redis/
      volumes:
        - name: redis-conf
          configMap:
            name: redis-conf
